added multiple controls

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,3 +1,14 @@
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
 <lib-ng-button></lib-ng-button>
+<lib-ng-calendar></lib-ng-calendar>
+<lib-ng-checkbox></lib-ng-checkbox>
+<lib-ng-dropdown></lib-ng-dropdown>
+<lib-ng-input-mask></lib-ng-input-mask>
+<lib-ng-input-switch></lib-ng-input-switch>
+<lib-ng-input-number></lib-ng-input-number>
+<lib-ng-input-text-area></lib-ng-input-text-area>
+<lib-ng-listbox></lib-ng-listbox>
+<lib-ng-input-group></lib-ng-input-group>
+
+<!-- <lib-ng-editor></lib-ng-editor> -->
