added more controls

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -8,6 +8,9 @@
 <lib-ng-input-switch></lib-ng-input-switch>
 <lib-ng-input-number></lib-ng-input-number>
 <lib-ng-input-text-area></lib-ng-input-text-area>
+<lib-ng-input-password></lib-ng-input-password>
+<lib-ng-input-select></lib-ng-input-select>
+<lib-ng-input-radio></lib-ng-input-radio>
 <lib-ng-listbox></lib-ng-listbox>
 <lib-ng-input-group></lib-ng-input-group>
 
