--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -13,5 +13,12 @@
 <lib-ng-input-radio></lib-ng-input-radio>
 <lib-ng-listbox></lib-ng-listbox>
 <lib-ng-input-group></lib-ng-input-group>
+<lib-ng-table></lib-ng-table>
+<lib-ng-accordion></lib-ng-accordion>
+<lib-ng-card></lib-ng-card>
+<lib-ng-fieldset></lib-ng-fieldset>
+<lib-ng-panel></lib-ng-panel>
+<lib-ng-tabview></lib-ng-tabview>
+<lib-ng-toolbar></lib-ng-toolbar>
 
 <!-- <lib-ng-editor></lib-ng-editor> -->
