--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -20,5 +20,12 @@
 <lib-ng-panel></lib-ng-panel>
 <lib-ng-tabview></lib-ng-tabview>
 <lib-ng-toolbar></lib-ng-toolbar>
-
+<!-- <lib-ng-confirm-dialog></lib-ng-confirm-dialog> -->
+<!-- <lib-ng-dialog></lib-ng-dialog> -->
+<!-- <lib-ng-sidebar></lib-ng-sidebar> -->
+<lib-ng-menubar></lib-ng-menubar>
+<lib-ng-messages></lib-ng-messages>
+<lib-ng-toast></lib-ng-toast>
+<lib-ng-progress-bar></lib-ng-progress-bar>
+<lib-ng-progress-spinner></lib-ng-progress-spinner>
 <!-- <lib-ng-editor></lib-ng-editor> -->
