added divider control

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,3 +1,4 @@
+<lib-ng-divider></lib-ng-divider>
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
 <lib-ng-button></lib-ng-button>
