header action test

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,4 +1,5 @@
-<lib-ng-divider></lib-ng-divider>
+<ng-header-actions [actions]="headerActions"></ng-header-actions>
+<!-- <lib-ng-divider></lib-ng-divider>
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
 <lib-ng-button></lib-ng-button>
@@ -21,12 +22,12 @@
 <lib-ng-panel></lib-ng-panel>
 <lib-ng-tabview></lib-ng-tabview>
 <lib-ng-toolbar></lib-ng-toolbar>
-<!-- <lib-ng-confirm-dialog></lib-ng-confirm-dialog> -->
-<!-- <lib-ng-dialog></lib-ng-dialog> -->
-<!-- <lib-ng-sidebar></lib-ng-sidebar> -->
+<lib-ng-confirm-dialog></lib-ng-confirm-dialog>
+<lib-ng-dialog></lib-ng-dialog>
+<lib-ng-sidebar></lib-ng-sidebar>
 <lib-ng-menubar></lib-ng-menubar>
 <lib-ng-messages></lib-ng-messages>
 <lib-ng-toast></lib-ng-toast>
 <lib-ng-progress-bar></lib-ng-progress-bar>
 <lib-ng-progress-spinner></lib-ng-progress-spinner>
-<!-- <lib-ng-editor></lib-ng-editor> -->
+<lib-ng-editor></lib-ng-editor> -->
