finished ag-grid

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,4 +1,8 @@
 <ng-header-actions [actions]="headerActions"></ng-header-actions>
+<ag-paged-list
+  [columnDefs]="columnDefs"
+  [data$]="rowData"
+></ag-paged-list>
 <!-- <lib-ng-divider></lib-ng-divider>
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
