--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -3,6 +3,7 @@
   [columnDefs]="columnDefs"
   [data$]="rowData"
 ></ag-paged-list>
+<ng-full-spinner></ng-full-spinner>
 <!-- <lib-ng-divider></lib-ng-divider>
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
