--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,10 +1,13 @@
-<ng-header-actions [actions]="headerActions"></ng-header-actions>
-<ag-paged-list
+<ng-paged-list-full
+  [headerActions]="headerActions"
   [columnDefs]="columnDefs"
-  [data$]="rowData"
-></ag-paged-list>
-<ng-full-spinner></ng-full-spinner>
-<!-- <lib-ng-divider></lib-ng-divider>
+  [rowData]="rowData"
+  [isBusy]="isBusy"
+  [message]="message"
+></ng-paged-list-full>
+
+<!-- <ng-full-spinner></ng-full-spinner>
+<lib-ng-divider></lib-ng-divider>
 <lib-ng-input-text></lib-ng-input-text>
 <lib-ng-input-search></lib-ng-input-search>
 <lib-ng-button></lib-ng-button>
