working paged list

--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,10 +1,6 @@
-<ng-paged-list-full
-  [headerActions]="headerActions"
-  [columnDefs]="columnDefs"
-  [rowData]="rowData"
-  [isBusy]="isBusy"
-  [message]="message"
-></ng-paged-list-full>
+<router-outlet></router-outlet>
+
+
 
 <!-- <ng-full-spinner></ng-full-spinner>
 <lib-ng-divider></lib-ng-divider>
