--- a/projects/testapp/src/app/app.component.html
+++ b/projects/testapp/src/app/app.component.html
@@ -1,6 +1,7 @@
+<app-menubar></app-menubar>
+<br/>
+<br/>
 <router-outlet></router-outlet>
-
-
 
 <!-- <ng-full-spinner></ng-full-spinner>
 <lib-ng-divider></lib-ng-divider>
