--- a/projects/corelib/src/lib/controls/ng-single-full/ng-single-full.component.css
+++ b/projects/corelib/src/lib/controls/ng-single-full/ng-single-full.component.css
@@ -24,3 +24,20 @@
   justify-content: flex-end;
   align-items: flex-start;
 }
+
+.preTemplate {
+  border: 1px solid #e4e4e4;
+  height: 200px;
+  margin-bottom: 10px;
+  overflow: auto;
+  padding: 20px;
+  border-radius: 4px;
+  background-color: #f8f9fa;
+}
+
+.preTemplate pre {
+  font-style: italic;
+  font-size: 0.9em;
+  width: 100%;
+  color: #9e9e9e;
+}
