--- a/projects/testapp/src/app/features/posts/posts-form/posts-form.component.html
+++ b/projects/testapp/src/app/features/posts/posts-form/posts-form.component.html
@@ -1,5 +1,22 @@
 <ng-single-full-entity [VM]="VM">
   <form #frm="ngForm">
-    <button>TEST</button>
+    <div class="p-fluid">
+      <div class="field col-6">
+        <label for="title" class="sr-only">Title</label>
+        <ng-input-text
+          [name]="'title'"
+          [nmodel]="VM.model && $any(VM.model.title)"
+        >
+        </ng-input-text>
+      </div>
+      <div class="field col-6">
+        <label for="body" class="sr-only">Body</label>
+        <ng-input-text-area
+          [name]="'body'"
+          [nmodel]="VM.model && $any(VM.model.body)"
+        >
+        </ng-input-text-area>
+      </div>
+    </div>
   </form>
 </ng-single-full-entity>
