finished control value accessor

--- a/projects/testapp/src/app/features/albums/albums-form/albums-form.component.html
+++ b/projects/testapp/src/app/features/albums/albums-form/albums-form.component.html
@@ -12,7 +12,7 @@
           <span [hidden]="titleField.valid || titleField.untouched">
             * is required
           </span>
-          <input
+          <!-- <input
             type="text"
             id="title"
             name="title"
@@ -24,7 +24,16 @@
             (change)="formStatus(frm)"
             #titleField="ngModel"
             required
-          />
+          /> -->
+          <ng-input-text
+            id="title"
+            name="title"
+            [(ngModel)]="VM.model && VM.model.title"
+            [isValid]="!titleField.valid"
+            #titleField="ngModel"
+            required
+          >
+          </ng-input-text>
         </span>
       </div>
     </div>
