--- a/projects/testapp/src/app/features/posts/posts-form/posts-form.component.html
+++ b/projects/testapp/src/app/features/posts/posts-form/posts-form.component.html
@@ -12,7 +12,7 @@
           <span [hidden]="titleField.valid || titleField.untouched">
             * is required
           </span>
-          <input
+          <!-- <input
             type="text"
             id="title"
             name="title"
@@ -24,7 +24,16 @@
             (change)="formStatus(frm)"
             #titleField="ngModel"
             required
-          />
+          /> -->
+          <ng-input-text
+            id="title"
+            name="title"
+            [(ngModel)]="VM.model && VM.model.title"
+            [isValid]="!titleField.valid"
+            #titleField="ngModel"
+            required
+          >
+          </ng-input-text>
         </span>
       </div>
       <div class="field col-6">
@@ -32,7 +41,7 @@
         <br/><span [hidden]="bodyField.valid || bodyField.untouched">
           * is required
         </span>
-        <textarea
+        <!-- <textarea
           id="body"
           name="body"
           pInputTextarea
@@ -45,7 +54,15 @@
           #bodyField="ngModel"
           required
         >
-        </textarea>
+        </textarea> -->
+        <ng-input-text-area
+          id="body"
+          name="body"
+          [(ngModel)]="VM.model && VM.model.body"
+          [isValid]="!bodyField.valid"
+          #bodyField="ngModel"
+          required
+        ></ng-input-text-area>
       </div>
     </div>
   </form>
